--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>
      JS  File Dropzone
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
