--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-     JS  File Dropzone
-    
+    <title>JS  File Dropzone </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
